# zkrollup-integration

./: .gitignore  .gitmodules  .typos.toml  Cargo.toml  README.md  flake.nix  justfile  rustfmt.toml
.github/: CODEOWNERS
.github/workflows/: build.yml  proof.yml
sp1/: .gitignore
sp1/contracts/src/: EspressoDerivation.sol
sp1/contracts/src/fixtures/: fixture.json
sp1/contracts/test/: EspressoDerivation.t.sol  Fibonacci.t.sol
sp1/program/: Cargo.toml
sp1/program/src/: main.rs
sp1/script/: Cargo.toml
sp1/test-program/: Cargo.toml
sp1/test-program/src/: lib.rs  main.rs
sp1/utils/: Cargo.toml
sp1/utils/src/: block.rs  lib.rs  ns_table.rs
sp1/utils/src/block/: header.rs  payload.rs
