[package]
version = "0.1.0"
name = "espresso-derivation"
edition = "2021"

[dependencies]
bincode = "1.3"
committable = { workspace = true }
espresso-derivation-utils = { path = "../utils" }
jf-merkle-tree = { workspace = true }
jf-vid = { workspace = true }
sp1-zkvm = { git = "https://github.com/succinctlabs/sp1.git", tag = "v1.2.0" }
sp1-derive = { git = "https://github.com/succinctlabs/sp1.git", tag = "v1.2.0" }
