[package]
version = "0.1.0"
name = "espresso-derivation-prover"
edition = "2021"

[[bin]]
name = "sp1-prove"
path = "src/bin/prove.rs"

[dependencies]
alloy-sol-types = "0.7.2"
clap = { version = "4.0", features = ["derive", "env"] }
committable = { workspace = true }
serde = { workspace = true }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", tag = "v1.0.8-testnet" }
tracing = "0.1.40"
espresso-derivation-utils = { path = "../utils" }
jf-merkle-tree = { workspace = true }

[build-dependencies]
sp1-helper = { git = "https://github.com/succinctlabs/sp1.git", tag = "v1.0.8-testnet" }
