[package]
version = "0.1.0"
name = "fibonacci-script"
edition = "2021"

[[bin]]
name = "sp1-prove"
path = "src/bin/prove.rs"

[dependencies]
alloy-sol-types = "0.7.2"
clap = { version = "4.0", features = ["derive", "env"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", tag = "v1.1.1" }
tracing = "0.1.40"
