[package]
version = "0.1.0"
name = "espresso-derivation-prover"
edition = "2021"

[[bin]]
name = "sp1-prove"
path = "src/bin/prove.rs"

[dependencies]
alloy-sol-types = "0.7.2"
ark-srs = "0.3.1"
bincode = "1.3"
clap = { version = "4.0", features = ["derive", "env"] }
committable = { workspace = true }
espresso-derivation-utils = { path = "../utils" }
jf-merkle-tree = { workspace = true }
jf-pcs = { workspace = true }
jf-vid = { workspace = true }
rand = "0.8"
serde = { workspace = true }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", tag = "v1.1.0" }
tracing = "0.1.40"

[build-dependencies]
sp1-helper = { git = "https://github.com/succinctlabs/sp1.git", tag = "v1.1.0" }
