[package]
name = "espresso-derivation-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-bn254 = { workspace = true }
ark-serialize = { workspace = true }
bincode = "1.3"
serde = { workspace = true }
committable = { workspace = true }
either = { workspace = true }
jf-merkle-tree = { workspace = true }
jf-vid = { workspace = true }
jf-pcs = { workspace = true }
jf-utils = { version = "0.4.4", git = "https://github.com/EspressoSystems/jellyfish", tag = "0.4.5", features = [
  "std",
] }
sha2 = { workspace = true }
primitive-types = { workspace = true }
