[package]
name = "espresso-derivation-utils"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
ark-bn254 = { workspace = true }
ark-serialize = { workspace = true }
ark-std = "0.4"
base64-bytes = "0.1"
bincode = "1.3"
committable = { workspace = true }
either = { workspace = true }
jf-merkle-tree = { workspace = true }
jf-pcs = { workspace = true }
jf-utils = { version = "0.4.4", git = "https://github.com/EspressoSystems/jellyfish", tag = "0.4.5", features = [
  "std",
] }
jf-vid = { workspace = true }
primitive-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = "3.9"
sha2 = { workspace = true }
tagged-base64 = "0.4"
